--- a/public/css/style.css
+++ b/public/css/style.css
@@ -156,7 +156,7 @@ h6.h1 strong {
         padding-right: 1rem !important;
         margin: 0;
         box-shadow: none;
-        color: #000; /* текст да буде видљив */
+        color: #000;
         background-color: #fff !important;
     }
 }
